--- a/Cargo.toml
+++ b/Cargo.toml
@@ -18,6 +18,7 @@ telnet = "0.2.1"
 chrono = "0.4.0"
 rand = "0.8"
 slint = "1.6"
+tokio = { version = "1.0", features = ["full"] }
 
 # Disable gettext on macOS due to https://github.com/Koka/gettext-rs/issues/114
 
