--- a/Cargo.toml
+++ b/Cargo.toml
@@ -18,6 +18,11 @@ rand = "0.8"
 slint = "1.7.1"
 tokio = { version = "1.0", features = ["full"] }
 libc = "0.2"
+flate2 = "1.0.31"
+tar = "0.4.39"  
+walkdir = "2.5.0"
+zip="2.1.6"
+regex="1.10.6"
 
 # Disable gettext on macOS due to https://github.com/Koka/gettext-rs/issues/114
 
