--- a/Cargo.toml
+++ b/Cargo.toml
@@ -23,12 +23,15 @@ tar = "0.4.39"
 walkdir = "2.5.0"
 zip="2.1.6"
 regex="1.10.6"
+log = "0.4.22"
+env_logger = "0.11.5"
 
 # Disable gettext on macOS due to https://github.com/Koka/gettext-rs/issues/114
 
 
 [build-dependencies]
 slint-build = "1.6"
+chrono = "0.4.0"
 
 # Remove the `#wasm#` to uncomment the wasm build.
 # This is commented out by default because we don't want to build it as a library by default
